tests/Project2/student_test/test_2_s12.out
Error type 10 at Line 26: applying indexing operator ([...]) on non-array type variable
